--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -12,3 +12,7 @@ tonic = "0.12.0"
 rand = "0.8.5"
 types = { workspace = true }
 chrono = "0.4.38"
+sha2 = "0.10.6"
+sp1-sdk = "3.4.0"
+serde = "1.0.188"
+serde_json = "1.0.100"
