--- a/script/Cargo.toml
+++ b/script/Cargo.toml
@@ -1,26 +1,26 @@
 [package]
+name = "script"
 version = "0.1.0"
-name = "fibonacci-script"
 edition = "2021"
-default-run = "fibonacci"
-
-[[bin]]
-name = "fibonacci"
-path = "src/bin/main.rs"
-
-[[bin]]
-name = "evm"
-path = "src/bin/evm.rs"
+default-run = "script"
 
 [dependencies]
-sp1-sdk = "3.0.0"
-serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
-serde = { version = "1.0.200", default-features = false, features = ["derive"] }
-clap = { version = "4.0", features = ["derive", "env"] }
-tracing = "0.1.40"
-hex = "0.4.3"
-alloy-sol-types = { workspace = true }
-fibonacci-lib = { path = "../lib" }
+sp1-sdk = { workspace = true }
+rpc = { workspace = true }
+types = { workspace = true }
+dotenv = "0.15"
+serde = { workspace = true }
+serde_json = { workspace = true }
+tokio = "1.30"
+chrono = "0.4"
+
+[[bin]]
+name = "script"
+path = "src/main.rs"
+
+[[bin]]
+name = "generate-compressed"
+path = "bin/generate_compressed.rs"
 
 [build-dependencies]
-sp1-helper = "3.0.0"
+sp1-build = { workspace = true }
