--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -13,6 +13,8 @@ rand = "0.8.5"
 types = { workspace = true }
 chrono = "0.4.38"
 sha2 = "0.10.6"
+# rpc = { path = "../" }
+
 sp1-sdk = { workspace = true }
 serde = "1.0.188"
 serde_json = "1.0.100"
