--- a/script/Cargo.toml
+++ b/script/Cargo.toml
@@ -11,6 +11,7 @@ types = { workspace = true }
 dotenv = "0.15"
 serde = { workspace = true }
 serde_json = { workspace = true }
+bincode = "1.3.3"
 tokio = "1.30"
 chrono = "0.4"
 
