--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,2 @@
-# 'mock' for generating mock proofs locally, 'local' for generating proofs locally, 'network' for generating proofs using the proving network.
-SP1_PROVER=local
-# If using the proving network, set to your whitelisted private key. For more information, see:
-# https://docs.succinct.xyz/prover-network/setup.html#key-setup
-SP1_PRIVATE_KEY=
+RPC_GRPC_ADDR=127.0.0.1:50052
+DATABASE_URL=postgresql://aggregationdata_user:7pDNn5Vz1sTyCqKvhlbv33xYVw3oy1xq@dpg-ctbm6lpu0jms73co6110-a.oregon-postgres.render.com/aggregationdata
