--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite"] }
+sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"] }
 dotenv = "0.15.0"
 eyre = "0.6.10"
 tokio = { version = "1.39.0", features = ["full"] }
