--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -14,8 +14,13 @@ types = { workspace = true }
 chrono = "0.4.38"
 sha2 = "0.10.6"
 bincode = "1.3.3"
-# rpc = { path = "../" }
-
+alloy-sol-types = { workspace = true }
+alloy-contract = { workspace = true }
+alloy-provider = { workspace = true }
+alloy-network = { workspace = true }
+alloy-signer-local = { workspace = true }
+alloy-rpc-types-eth = { workspace = true }
+clap = "4.0.0"
 sp1-sdk = { workspace = true }
 serde = "1.0.188"
 serde_json = "1.0.100"
