--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -9,6 +9,7 @@ prost = "0.13.3"
 serde = "1.0.192"
 sqlx = "0.8.2"
 sha2 = "0.10.6"
+tiny-keccak = { version = "2.0.2", features = ["keccak"] }
 
 [build-dependencies]
 tonic-build = "0.12"
